--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.16.5
 yarn_mappings=1.16.5+build.9
 loader_version=0.11.3
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=1.0.0
 maven_group=us.potatoboy
 archives_base_name=headindex
 # Dependencies
