--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     modImplementation include("me.lucko:fabric-permissions-api:0.1-SNAPSHOT")
-    modImplementation include("eu.pb4:sgui:1.0.0-rc3-1.17.1")
-    modImplementation include("fr.catcore:server-translations-api:1.4.3+1.17")
+    modImplementation include("eu.pb4:sgui:1.0.0-rc5+1.17.1")
+    modImplementation include("fr.catcore:server-translations-api:1.4.7+1.17")
 }
 
 processResources {
