--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18-rc3
-yarn_mappings=1.18-rc3+build.2
-loader_version=0.12.5
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.22
+loader_version=0.12.12
 # Mod Properties
-mod_version=1.0.4
+mod_version=1.0.5
 maven_group=us.potatoboy
 archives_base_name=headindex
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.43.1+1.18
+fabric_version=0.46.1+1.18
