--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.1
-yarn_mappings=1.18.1+build.22
-loader_version=0.12.12
+# check these on https://fabricmc.net/develop/
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.2
+loader_version=0.13.3
 # Mod Properties
 mod_version=1.0.5
 maven_group=us.potatoboy
 archives_base_name=headindex
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.46.1+1.18
+# check this on https://fabricmc.net/develop/
+fabric_version=0.48.0+1.18.2
