--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     modImplementation include("me.lucko:fabric-permissions-api:0.1-SNAPSHOT")
     modImplementation include("eu.pb4:sgui:1.2.0+1.19.3")
     modImplementation include("fr.catcore:server-translations-api:1.4.19+1.19.3")
+    modImplementation include("eu.pb4:common-economy-api:1.0.0")
 }
 
 processResources {
