--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,9 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation include("me.lucko:fabric-permissions-api:0.1-SNAPSHOT")
-    modImplementation include("eu.pb4:sgui:1.2.2+1.20")
-    modImplementation include("xyz.nucleoid:server-translations-api:2.0.0-beta.2+1.19.4-pre2")
+    modImplementation include("me.lucko:fabric-permissions-api:0.2-SNAPSHOT")
+    modImplementation include("eu.pb4:sgui:1.3.0+1.20.2")
+    modImplementation include("xyz.nucleoid:server-translations-api:2.1.0+1.20.2-rc2")
     modImplementation include("eu.pb4:common-economy-api:1.1.1")
 }
 
