--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     modImplementation include("me.lucko:fabric-permissions-api:0.3.1")
-    modImplementation include("eu.pb4:sgui:1.5.0+1.20.5")
-    modImplementation include("xyz.nucleoid:server-translations-api:2.3.0+1.20.5-rc2")
+    modImplementation include("eu.pb4:sgui:1.6.0+1.21")
+    modImplementation include("xyz.nucleoid:server-translations-api:2.3.1+1.21-pre2")
     modImplementation include("eu.pb4:common-economy-api:1.1.1")
 }
 
