--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '1.6.+'
+    id 'fabric-loom' version '1.8.+'
     id 'maven-publish'
 }
 
@@ -24,9 +24,9 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation include("me.lucko:fabric-permissions-api:0.3.1")
-    modImplementation include("eu.pb4:sgui:1.6.0+1.21")
-    modImplementation include("xyz.nucleoid:server-translations-api:2.3.1+1.21-pre2")
+    modImplementation include("me.lucko:fabric-permissions-api:0.3.3")
+    modImplementation include("eu.pb4:sgui:1.7.2+1.21.2")
+    modImplementation include("xyz.nucleoid:server-translations-api:2.4.0+1.21.2-rc1")
     modImplementation include("eu.pb4:common-economy-api:1.1.1")
 }
 
