--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     modImplementation include("me.lucko:fabric-permissions-api:0.4.1")
-    modImplementation include("eu.pb4:sgui:1.10.0+1.21.6")
-    modImplementation include("xyz.nucleoid:server-translations-api:2.5.0+1.21.5-rc1")
+    modImplementation include("eu.pb4:sgui:1.11.0+1.21.9")
+    modImplementation include("xyz.nucleoid:server-translations-api:2.5.2+1.21.9-pre3")
     modImplementation include("eu.pb4:common-economy-api:1.1.1")
 }
 
